Modified my template to test if my service was running properly

--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -1,4 +1,17 @@
 <div class="lists">
+  {{list.todoLists}}
+<!--
   <ul id="dispList">
+    <li *ngFor="let list of lists">
+      <tr>
+        <td class="check">
+          <input type="checkbox">
+        </td>
+        <td class="todo">
+          <p>{{list.title}}</p>
+        </td>
+      </tr>
+    </li>
   </ul>
+-->
 </div>
